[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyx"
authors = [{name = "Pradhyum R", email = "drpradhyum2016@outlook.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/techieji/pyx"

[project.scripts]
pyx-shell = "pyx:main"
